@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

package chancecards {
    abstract class ChanceCard {
        -cardName : String

        {abstract} +doCardAction(playerID:UUID) : void
    }

    package pay {
        abstract class PayCC {
        }

        ChanceCard <|-- PayCC
    }

    package receive {
        abstract class ReceiveCC {
        }

        ChanceCard <|-- ReceiveCC
    }

    package move {
        abstract class MoveToFieldCC {
        }

        ChanceCard <|-- MoveToFieldCC
    }

    package misc {
        class KingsBirthdayCC {
        }

        ChanceCard <|-- KingsBirthdayCC
    }
}

@enduml